--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a class="btn btn-warning btn-block" href="#target" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -56,7 +59,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                         src="img/uthappizza.png" alt="uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>    
                     </div>
                 </div>
@@ -69,8 +72,14 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">  
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center"
+                    src="img/buffet.png" alt="buffet">
+                </div>    
             </div>
         </div>
 
@@ -90,7 +99,60 @@
                 </div>
             </div>
         </div>
+        <div class="row row-content align-items-center align-self-center" id="target">
+            <div class="col-12 col-md-8 offset-md-2">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="md-10">
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio"> 1
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio"> 2
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio"> 3
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio"> 4
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio"> 5
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio"> 6
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="date" class="col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-6 col-md-4">
+                                    <input type="text" class="form-control" id="date" name="date"
+                                        placeholder="Date">
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <input type="text" class="form-control" id="time" name="time"
+                                        placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="submit" class="btn btn-primary">
+                                        Reserve
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
 
     <footer class="footer">
         <div class="container">
