--- a/index.html
+++ b/index.html
@@ -76,6 +76,80 @@
         </div>
     </div>
 
+    <div id="tableModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                            <div class="md-10">
+                                <label class="radio-inline">
+                                    <input type="radio" name="optradio"> 1
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="optradio"> 2
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="optradio"> 3
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="optradio"> 4
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="optradio"> 5
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="optradio"> 6
+                                </label>
+                            </div>
+                        </div>
+                        
+                        <div class="form-group row">
+                            <label for="section" class="col-md-2 col-form-label">Section</label>
+                            <div class="col-md-10">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                      <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                      <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="date" class="col-md-2 col-form-label">Date and Time</label>
+                            <div class="col-6 col-md-4">
+                                <input type="text" class="form-control" id="date" name="date"
+                                    placeholder="Date">
+                            </div>
+                            <div class="col-6 col-md-4">
+                                <input type="text" class="form-control" id="time" name="time"
+                                    placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">
+                                    Reserve
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -87,10 +161,10 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a class="btn btn-warning nav-link btn-block" 
-                        data-toggle="tooltip" data-html="true"
-                        title="Or Call us at <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#target" role="button">Reserve Table</a>
+                    <button type="button" class="btn btn-warning btn-block" 
+                        data-toggle="modal" 
+                        data-target="#tableModal">Reserve Table
+                    </button>
                 </div>
             </div>
         </div>
@@ -190,60 +264,7 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content align-items-center align-self-center" id="target">
-            <div class="col-12 col-md-8 offset-md-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group row">
-                                <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
-                                <div class="md-10">
-                                    <label class="radio-inline">
-                                        <input type="radio" name="optradio"> 1
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="optradio"> 2
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="optradio"> 3
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="optradio"> 4
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="optradio"> 5
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="optradio"> 6
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="date" class="col-md-2 col-form-label">Date and Time</label>
-                                <div class="col-6 col-md-4">
-                                    <input type="text" class="form-control" id="date" name="date"
-                                        placeholder="Date">
-                                </div>
-                                <div class="col-6 col-md-4">
-                                    <input type="text" class="form-control" id="time" name="time"
-                                        placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-md-2 col-md-10">
-                                    <button type="submit" class="btn btn-primary">
-                                        Reserve
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-
 
     <footer class="footer">
         <div class="container">
@@ -290,11 +311,5 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
-
 </html>
